--- a/style.css
+++ b/style.css
@@ -46,9 +46,10 @@ background-color: antiquewhite;
 border-radius: 10px;
 box-shadow: 5px 10px 10px gray;
 height: 100%;
-width: 700px;
+width: 630px;
 display: block;
 padding-bottom: 40px;
+text-align: center;
 }
 .head{
    color:blueviolet;
@@ -60,7 +61,7 @@ padding-bottom: 40px;
 table, th, tr, td{
 border: 1.7px solid blue;
 border-collapse: collapse;
-padding: 20px;
+padding: 15px;
 margin-left: 70px;
 }
 
